# backend/api/api-doc.json
@@ -35,7 +35,7 @@
            "original_branch":{
               "type":"string"
            },
-           "origin_database":{
+           "author":{
               "type":"string"
            },
            "message":{
@@ -45,7 +45,7 @@
         "required":[
            "tracking_branch",
            "original_branch",
-           "origin_database",
+           "author",
            "message"
         ]
      },
@@ -79,7 +79,30 @@
            "original_branch",
            "origin_database"
         ]
-     }
+     },
+     "GetDiff":{
+      "type":"array",
+      "items":{
+      "type": "object",
+      "properties":{
+            "after":{
+               "type":"object"
+            },
+            "before":{
+               "type":"object"
+            },
+            "diff":{
+               "type":"object"
+            }
+         }
+      },
+      "required":[
+         "after",
+         "before",
+         "diff"
+      ]
+   }
+
   },
   "paths":{
      
